# snake-toy-vm

./: .gitignore  8_bit_pic.py  LICENSE  Makefile  README.md  brainfuck.py  config.py  f4_misc.py  gui.py  log.py  main.py  pyproject.toml  requirements.txt  toy_assembler.py  toy_vm.py  toy_vm_test.asm  toy_vm_test_2.asm  toy_vm_video_pattern.asm  virtual_machine.py  vm_types.py
